--- a/views/topic.jade
+++ b/views/topic.jade
@@ -2,7 +2,13 @@ extends layout
 
 block content
     h1= topicContents.title
-    each message in topicContents.messages
-        div(class="message-header") From: #{message.username} | Posted: #{message.createTime}
-        div(class="message")= message.message
+    div(class="messages")
+        each message in topicContents.messages
+            div(class="message-header") From: #{message.username} | Posted: #{message.createTime}
+            div(class="message")= message.message
     a(href="/reply/#{topicContents.id}") Reply
+    script(src="/js/nodeboard.js")
+    script(type="text/javascript").
+        window.onload = function() {
+            getReplies(#{topicContents.id}, 1, '#{token}');
+        };
